# ljh_Gemini335

./: .gitignore  README.md
OrbbecSDK_ROS2/: README.MD  README_CN.MD
OrbbecSDK_ROS2/orbbec_camera/: CMakeLists.txt  package.xml
OrbbecSDK_ROS2/orbbec_camera/config/: gemini330_series.yaml
OrbbecSDK_ROS2/orbbec_camera/include/orbbec_camera/: constants.h  ob_camera_node.h  utils.h
OrbbecSDK_ROS2/orbbec_camera/launch/: gemini_330_series.launch.py
OrbbecSDK_ROS2/orbbec_camera/rviz/: gemini_330_series.rviz
OrbbecSDK_ROS2/orbbec_camera/src/: ob_camera_node.cpp  utils.cpp
OrbbecSDK_ROS2/orbbec_camera/tools/: firmware_update_tool.cpp  ip_config_tool.cpp  list_camera_profile.cpp  list_devices_node.cpp
OrbbecSDK_ROS2/orbbec_camera_msgs/: package.xml
OrbbecSDK_ROS2/orbbec_description/: package.xml
OrbbecSDK_ROS2/orbbec_description/urdf/: astra_2.urdf.xacro  gemini_2.urdf.xacro  gemini_2_L.urdf.xacro  gemini_335_L_336_L.urdf.xacro  gemini_335_Le.urdf.xacro  gemini_335_Lg.urdf.xacro  gemini_345.urdf.xacro  gemini_345_Lg.urdf.xacro  test_astra_2.urdf.xacro  test_gemini_2.urdf.xacro  test_gemini_2_L.urdf.xacro  test_gemini_335_L.urdf.xacro  test_gemini_335_Le.urdf.xacro  test_gemini_335_Lg.urdf.xacro  test_gemini_336_L.urdf.xacro  test_gemini_345.urdf.xacro  test_gemini_345_Lg.urdf.xacro
ljh_g335_bringup/: CMakeLists.txt  package.xml
ljh_g335_bringup/config/: gemini335.yaml  gemini335_performance.yaml  gemini335_quality.yaml
ljh_g335_bringup/launch/: gemini335.launch.py
ljh_g335_bringup/rviz/: gemini335.rviz
scripts/: build.sh  setup_env.sh
(+18 files in other folders)
